public enum Pinta {
        PICA,
        CORAZON,
        TREBOL,
        DIAMANTE
}
